sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:14: error: not found: value n
			n=n+1
                        ^AlgBubbleSort1:17: error: not found: value n
			n=0
                        ^AlgBubbleSort1:19: error: not found: value n
		return n
                       ^AlgBubbleSort1:22: error: not found: value n
}while(n!=0)
       ^