sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {


	
	
	do{
		
	for(i<- 0 to 8){		
		var j:Int = i+1
		
		if(!plusPetit(i,j)){
			echange(i,j)
			n=n+1
			}
		else{
			n=0
		}
		return n
		}

}while(n!=0)



}
